# LumieOS-0-2

./: Cargo.toml  config.toml
desktop/: Cargo.toml
desktop/src/: desktop.rs  input.rs  lib.rs  render.rs  tasks.rs  widgets.rs
drv_fs/: Cargo.toml
drv_fs/src/: lib.rs  vfat.rs
drv_kbd/: Cargo.toml
drv_kbd/src/: api.rs  init.rs  lib.rs  process.rs  ps2.rs  scancode.rs
drv_mouse/: Cargo.toml
drv_mouse/src/: init.rs  lib.rs  packet.rs  ps2.rs
editor/: Cargo.toml
editor/src/: buffer.rs  editor.rs  input.rs  lib.rs  render.rs
kernel/: Cargo.toml
kernel/src/: api.rs  ffi.rs  globals.rs  lib.rs  main.rs
kernel/src/api/: mod.rs
kernel/src/arch/: gdt.rs  idt.rs  mod.rs  pic.rs  (+2 more)
language/: README.txt  hello.lc  syscall-demo.lc  zenith-linux
libs/lumie_math/: Cargo.toml
libs/lumie_std/: Cargo.toml
loader/: Cargo.toml
loader/src/: boot.rs  devices.rs  display.rs  ffi.rs  font.rs  gpt.rs  input.rs  install.rs  lib.rs  main.rs  uefi.rs
sdk/: SDK.md  sdk_build.py
sdk/examples/gpu_demo/: Cargo.toml
sdk/examples/gpu_demo/src/: lib.rs
sdk/lumie_sdk/: Cargo.toml
sdk/lumiec_sdk/: lumie_fs.h  lumie_gfx.h  lumie_input.h  lumie_mem.h  lumie_os.h  lumie_os_all.h  lumie_term.h
sdk/templates/app/: Cargo.toml
sdk/templates/app/src/: lib.rs
shell/: Cargo.toml
shell/src/: builtins.rs  commands.rs  filesystem.rs  lib.rs  login.rs  parser.rs  per.rs  prompt.rs
test_output/system/: shell.lsh
tools/: a2lmod.py  build_release.py  gen_drivers.py  lumfs_tool.c  lzss.py  make_disk_image.py  make_driver_stubs.py  make_install_pkg.py  per.py  verify_img.py
(+111 files in other folders)
