[workspace]
members = [
    "kernel",
    "loader",
    "shell",
    "editor",
    "desktop",
    "drv_kbd",
    "drv_mouse",
    "drv_fs",
    "libs/lumie_std",
    "libs/lumie_math",
    "sdk/lumie_sdk",
    "sdk/examples/hello",
    "sdk/examples/sysinfo",
    "sdk/examples/gpu_demo",
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = "symbols"
panic = "abort"
