[package]
name = "sdk_gpu_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
lumie_sdk = { path = "../../lumie_sdk" }
lumie_std = { path = "../../../libs/lumie_std" }

[lib]
crate-type = ["staticlib"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = "symbols"
panic = "abort"
